examples/invalid/semanticErr/declaration/basicTypeErr06.wacc
# type mismatch: bool <- string
# Output:
# #semantic error#

#Program:#

begin
  bool b = "true"
end
